Fixed the spacing in the Product section

--- a/style.css
+++ b/style.css
@@ -125,6 +125,15 @@ ul li a:hover {
   padding: var(--space-16) var(--space-16);
 }
 
+.card-item:hover
+{
+    .card-title
+    {
+        color: var(--sky-blue);
+        transition: all .4s ease;
+    }
+}
+
 .card-item:nth-child(2) {
   background: url("https://static.wixstatic.com/media/84770f_fb90404e629b4f249950d6b66895badb~mv2.jpeg/v1/fill/w_299,h_298,fp_0.50_0.50,q_90,enc_auto/84770f_fb90404e629b4f249950d6b66895badb~mv2.jpeg 1x, https://static.wixstatic.com/media/84770f_fb90404e629b4f249950d6b66895badb~mv2.jpeg/v1/fill/w_1196,h_1192,fp_0.50_0.50,q_90,enc_auto/84770f_fb90404e629b4f249950d6b66895badb~mv2.jpeg 2x")
     center center;
@@ -138,13 +147,11 @@ ul li a:hover {
 }
 
 .card-title {
-  margin-top: 10rem;
-  font-weight: 600;
+    margin-top: 10rem;
+    font-weight: 600;
     flex-basis: 300px;
     color: var(--white);
-    background: url("https://static.wixstatic.com/media/84770f_3e8a581ece8b4ccca12d7f49880e1051~mv2.jpg/v1/fill/w_299,h_298,fp_0.50_0.50,q_90,enc_auto/84770f_3e8a581ece8b4ccca12d7f49880e1051~mv2.jpg 1x, https://static.wixstatic.com/media/84770f_3e8a581ece8b4ccca12d7f49880e1051~mv2.jpg/v1/fill/w_1196,h_1192,fp_0.50_0.50,q_90,enc_auto/84770f_3e8a581ece8b4ccca12d7f49880e1051~mv2.jpg 2x") center center;
-    background-size: cover;
-    padding: var(--space-16) var(--space-16);
+    padding: var(--space-16) 0;
 }
 
 .card-item:nth-child(2) {
